# truehdd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh-CN.md  build.rs  deny.toml
.github/actions/setup-release-env/: action.yml
.github/workflows/: ci.yml  release.yml
bytes_macro/: Cargo.toml
bytes_macro/src/: lib.rs
src/: byteorder.rs  caf.rs  damf.rs  input.rs  main.rs  timestamp.rs  wav.rs
src/cli/: command.rs  decode.rs  info.rs  mod.rs
src/cli/decode/: atmos.rs  decode_impl.rs  decoder_thread.rs  handler.rs  mod.rs  output.rs  processor.rs  progress.rs
truehd/: CHANGELOG.md  Cargo.toml  README.md
truehd/src/: lib.rs
truehd/src/process/: decode.rs  extract.rs  mod.rs  parse.rs
truehd/src/structs/: access_unit.rs  block.rs  channel.rs  evolution.rs  extra_data.rs  filter.rs  matrix.rs  mod.rs  oamd.rs  restart_header.rs  substream.rs  sync.rs  timestamp.rs
truehd/src/utils/: bitstream_io.rs  buffer_pool.rs  crc.rs  dither.rs  errors.rs  mod.rs  timing.rs
truehdd-macros/: Cargo.toml
