[package]
name = "truehdd-macros"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Procedural macros for the truehdd project"
repository = "https://github.com/truehdd/truehdd/tree/main/truehdd-macros"
authors = ["Rainbaby"]
rust-version = "1.87.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
